# fat-tracer

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
man/: fatracer.1
po/: .gitignore  POTFILES.in  fatracer.pot  ja.po
script/: update_gettext.sh
src/: fat.h  fat12.h  fat12_common.c  fat16_common.c  fat32_common.c  main.c
tests/: init.sh  simple.sh  usage.sh
